# ranking-forge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  DESIGN.md  Dockerfile  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  test.sh
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  openapi.yaml  prepare-sqlx.sh  test.sh
backend/.sqlx/: query-0003753d04bbceaffde5811b2e1cc8d79eac92ef3619107558bc336063fd2c80.json  query-01c7d0dfd4aac1cb0f317cd19ac897c3b0927d1b28cd801f01bdfb150d4b3f0a.json  query-025fcc3a8eb3a6987be35a5f4ade1f74e575940cc5f42045dabec181af581b09.json  query-02a0de590a58d5b62035cb5c546be3fc7ad2765da115b79ef0945e4a73024c64.json  query-03907b0cc9ad379b2fdff55cc4416bfceeb9e864528a0c5416a85d6d63f3d600.json  query-03d1389c456fba2aa9f236dcbc57a552319743ac71e5004cda6f36b3c8e14e44.json  query-03fd8a569cb182d255b0a01f2b1f42bdcff8696135be236945d2aca27ee52086.json  query-0443e85c0703a392f7359938619ea8abc2afba21b2555af0fb9f5a6f0da885b7.json  query-0498008c0404c79c17d6ae4e283a525270ae9545b55643b6bf99775902265fcf.json  query-04a9ed500d54524cf508653d834c23d91bdb8f71f8966eb86c7d2aa734d6a542.json  query-059e9634b35ffdb38550bd2d3f121e0fb539a14dbad642d7b475fc46709a749e.json  query-05e57768e2de3e9420227e28d430ef134aef0db119fe9109aaf494a4a4210ae5.json  query-05e66ccee10a4881d330f68db08e73ddb713353c5d6567b89c63673b77b511bc.json  query-064fc83569dd3e856b90a63a235178b635e00cd99bfbd04bd4ba50b7b735833c.json  query-06535b51281588151831aef995daf24486b04aa640b939f67cc24addd0de1409.json  query-06c921234f70a2c6fb4a395acbca492be342e4827e423f8f37d576976425ac89.json  query-070d5aa90c8ea32b5ef44e81364113ff8eea3241defcf5d5ae08a7c70dcea7ab.json  query-0716e03861d1b610ae64a355e91154e4514989e4fbc7374d7fb327538ebc2312.json  query-07a6995fcd2ce12af9a3e3b051398886accdbdc4477530fc01123af3c2850394.json  query-08e06ccf7b0f4ffadcd719fc019dfe37599edd8f89d8bfd880436631a8073705.json  query-09675e5e2de54e3abfbd7a076d573587c42a2bbfdffd9b97aef4a137759dad9d.json  query-0a24797390d0ed9db10a1a45722e785940145d0ded7bf7af1a281371afb05442.json  query-0aa7659f4ece9bbd87e80cf3a1a8702cb980c6da67659eee7da620bb9592ff0e.json  query-0acd93289244d1ccda4078585eef3fcaf1496efb72e219a251ee653d654d88d7.json  query-0b677c3bf93e90480e9da7ea3b4d5b33764098780d4998e2d1a72d0361047ee7.json  query-0c272256349b7c0ade6f6c30a79d4628aabfbfe24c41f23d06867ada0412d58d.json  query-0c45ee2ce0e00b269ae09b6a53d2dc7960ab924eaa5982593e1b54580ac09610.json  query-0c4bf67ba56b3e796f0ef00422e27dd590bc05c00742d712c7eba95eacf13a36.json  query-0c68837d208b99df2af9b95d2f9620b6cee003c78485280a460baff64ae6a8a5.json  query-0c6cd8413d87ca75b0c5519b01a9be5d39b6b4caeab9a549461985b76a376ebe.json  query-0ca178c118be0da306bd2c8188d796eead16d2d439845d32e3dba7ab9a2cd55f.json  query-0d53bf41f9e7ab422ef1870a1771024c5619ddbf9695cc9908db6a89fd2aa8e7.json  query-0e64717367b91ef945778452206e340d5d41a9cca90736edb3ce875002a4d7eb.json  query-0e82bc05cedd1a7f3f25ccfd85424730287bf424c335db7d31dd062a1da67b6e.json  query-0ed3524522a0a2cc701e76d060064891c5eabec5e5bed0b8434a0b012c409d78.json  query-0fc4772247e49325fd1b9bf69fcc7064db7a0018fdf4d33cd88e6d52bf1b1785.json  query-0ff40c4b1b48a78aeb103d884bd1726db3508717fa4b3dfa36faacdca180348b.json  query-10028efc3d981b4ac526221d70cdbe2fb4b9cd2bd832f1f4038818e3d7839a75.json  query-10eff9b6041724c2f59864df6d9f0c4eed095095b4faae72fc46f4745011db3b.json  query-1128bdaf573eeb77ad2023fd0e921441cbede0c1dd891f816af3798da788f5dd.json  (+425 more)
backend/crates/api/: Cargo.toml
backend/crates/api/src/: config.rs  error.rs  extractors.rs  lib.rs  main.rs  state.rs
backend/crates/api/src/routes/: account.rs  auth.rs  games.rs  import.rs  invite_links.rs  members.rs  mod.rs  players.rs  projects.rs  rankings.rs  tournaments.rs
backend/crates/api/tests/: api.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: error.rs  jobs.rs  lib.rs  upset.rs
backend/crates/common/src/algorithms/: elo.rs  glicko2.rs  mod.rs
backend/crates/common/src/models/: mod.rs
backend/crates/common/src/startgg/: mod.rs  operations.rs  queries.rs  schema.graphql
backend/crates/common/src/startgg/operations/: mod.rs  tests.rs
backend/crates/common/src/startgg/queries/: tests.rs
backend/crates/crawler/: Cargo.toml
backend/crates/crawler/src/: api.rs  api_types.rs  cli.rs  db.rs  lib.rs  main.rs  scraper.rs
backend/crates/crawler/tests/: integration.rs
backend/crates/e2e/: Cargo.toml
backend/crates/e2e/tests/: crawler_live.rs  full_flow.rs  import_live.rs
backend/crates/topology/: Cargo.toml
backend/crates/topology/tests/: smoke.rs
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: compute.rs  config.rs  import.rs  lib.rs  main.rs
backend/migrations/: 001_initial.sql  002_job_progress.sql
docs/: DESIGN.md  modules.md  routes.md
docs/adr/: 001-postgres-job-queue.md  002-no-db-mocks.md  003-startgg-client-injection.md  004-split-api-url.md  005-samesite-strict-cookie.md  006-vitest-svelte-plugin.md  README.md
docs/startgg/: fetch-schema.sh  project-notes.md
docs/superpowers/plans/: 2026-05-13-retry-import.md  2026-05-13-stats-all-opponents.md  2026-05-14-frontend-overhaul.md  2026-05-14-startgg-api-docs.md  2026-05-14-startgg-complexity.md  2026-05-14-tournament-dedup.md  2026-05-14-tournament-filter.md  2026-05-14-worker-graceful-shutdown.md  2026-05-15-bracket-type-filter.md  2026-05-15-dark-mode.md  2026-05-15-player-linking-improvement.md  2026-05-15-reset-filters.md  2026-05-15-set-detail-modal-enrichment.md  2026-05-15-shadcn-new-components.md  2026-05-15-shadcn-refactor.md  2026-05-16-auth-security-hardening.md  2026-05-16-bracket-filter-rare-dialog.md  2026-05-16-password-confirm.md  2026-05-16-player-linking-frontend.md  2026-05-17-ranking.md  (+41 more)
web/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/src/: app.css  app.d.ts  hooks.server.ts  setupTests.ts
web/test-results/: .last-run.json
web/tests/: auth.test.ts  landing.test.ts  mock-api.js  player.test.ts  projects.test.ts
(+201 files in other folders)
