[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
backon = { version = "1.6.0", features = ["tokio-sleep"] }
chrono = { version = "0.4.44", features = ["serde"] }
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
graphql-parser = "0.4.1"
serde_json = "1.0.149"
wiremock = "0.6"
