[package]
name = "e2e"
version = "0.2.0"
edition = "2024"

[dev-dependencies]
api    = { path = "../api" }
worker = { path = "../worker" }
axum           = { version = "0.8.9" }
http-body-util = "0.1"
serde_json     = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
uuid  = { version = "1.23.1", features = ["v4", "serde"] }
common = { path = "../common" }
