[package]
name = "topology"
version = "0.2.0"
edition = "2024"

[features]
topology-tests = []

[dev-dependencies]
reqwest   = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
tokio     = { version = "1", features = ["full"] }
